--- a/Roles/setup.minions/templates/kubernetes/kubelet.j2
+++ b/Roles/setup.minions/templates/kubernetes/kubelet.j2
@@ -8,7 +8,7 @@
 KUBELET_ADDRESS="--address={{ listen_address }}"
 
 # Port minions listen on
-KUBELET_PORT="--kubelet-port=10250"
+KUBELET_PORT="--port=10250"
 
 # You may leave this blank to use the actual hostname
 KUBELET_HOSTNAME="--hostname-override=REPLACE_ME"
